# rl_pacman

./: .gitignore  pyproject.toml
animations/: double_q_learning_game.avi  q_learning_game.avi  random_game.avi
src/rl_pacman/: environment.py  q_learning_game.py  random_game.py  random_play.ipynb
src/rl_pacman/q_learning/: double_q_learning_game.py  q_learning_game.py  q_matrix.py
